[project]
name = "remnawave-api"
version = "1.1.0"
description = "A Python SDK for interacting with the Remnawave API."
authors = [
    {name = "Artem",email = "sm1ky@forestsnet.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rapid-api-client (==0.6.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "httpx (>=0.27.2,<0.28.0)",
    "pydantic[email]>=2.9.2,<3.0.0",
    "pydantic-core>=2.33.1,<2.34.0",
    "pydantic>=2.9.2,<3.0.0",
]
keywords = ["remnawave", "api", "sdk", "proxy", "httpx", "async", "xray"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/sm1ky/remnawave-api"
Documentation-EN = "https://github.com/sm1ky/remnawave-api/blob/production/README.md"
Developer = "https://t.me/forests_dev"

[tool.poetry.group.test.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"
pytest = ">=8.0"
pytest-asyncio = "^0.25.3"
pytest-mock = ">=3.9"
httpx = ">=0.27.2,<0.28.0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"

[tool.pytest.ini_options]
addopts = [ "-n", "logical", "-ra", "--strict-config", "--strict-markers" ]
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"